<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">تسک جدید</string>
    <string name="menu_timer">زمان سنج</string>
    <string name="menu_statistic">گزارش</string>
    <string name="menu_share">تنظیمات</string>
    <string name="menu_about">درباره</string>
    <string name="menu_age">محاسبه سن</string>
    <string name="menu_tasks">تسک ها</string>


    <string name="age_preference">TASK_MANAGER_USER_AGE_PREFERENCE</string>
    <string name="start_bigger_than_finish">زمان انتخاب شده صحیح نمیباشد</string>

</resources>
